# routers/api/v1/user.go
@@ -76,5 +76,21 @@ func RefreshToken(c *gin.Context) {
 	auth.RefreshHandler(c)
 }
 
+// Current godoc
+//
+//	@Summary	Current
+//	@Produce	json
+//	@Tags		UserApi
+//	@Accept		json
+//	@Success	0		{object}	r.Response	"成功"
+//	@Failure	40005	{object}	r.Response	"获取当前用户信息失败"
+//	@Router		/current [get]
 func Current(c *gin.Context) {
+	value, exists := c.Get("JWT_PAYLOAD")
+	if !exists {
+		c.JSON(http.StatusBadRequest, r.NO_AUTH.WithMsg("获取当前用户信息失败"))
+		c.Abort()
+	} else {
+		c.JSON(http.StatusOK, r.OK.WithData(value))
+	}
 }
